Fix "InaccessibleObjectException" exception on Linux startup (#1559)
Linux builds would previously throw this error on startup:
> java.lang.reflect.InaccessibleObjectException: Unable to make field private
> static java.lang.String sun.awt.X11.XToolkit.awtAppClassName accessible:
> module java.desktop does not "opens sun.awt.X11" to unnamed module @4c8aea9c

The code that triggered this in Processing itself documented that an
`--add-opens` parameter must be used, but this was never applied in the
gradle build.

Co-authored-by: Tony Wasserka <neobrain@users.noreply.github.com>